# pdf-rag

./: README.md  docker-compose.yml  pyproject.toml
App/: PDD.ipynb
App/Vector/: chroma.sqlite3
